#4 sample application which shows how common-resteasy works and a REST test