@@ -21,8 +21,8 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>WegenenVerkeer Common RestEASY Parent POM</name>
-    <description>General parent for WegenenVerkeer (AWV) common RestEASY project.</description>
+    <name>WegenenVerkeer Common RESTEasy Parent POM</name>
+    <description>General parent for WegenenVerkeer (AWV) common RESTEasy project.</description>
     <url>http://www.wegenenverkeer.be</url>
 
     <scm>
@@ -53,10 +53,17 @@
 
     <modules>
         <module>resteasy</module>
+        <module>web</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
+
+            <dependency>
+                <groupId>be.wegenenverkeer.common</groupId>
+                <artifactId>common-resteasy</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -153,6 +160,11 @@
                 <version>${spring.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-core</artifactId>
                 <version>${spring.version}</version>
@@ -178,7 +190,7 @@
             <dependency>
                 <groupId>commons-collections</groupId>
                 <artifactId>commons-collections</artifactId>
-                <version>3.2</version>
+                <version>3.2.1</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
@@ -249,6 +261,18 @@
             </dependency>
 
             <dependency>
+                <groupId>com.jayway.restassured</groupId>
+                <artifactId>rest-assured</artifactId>
+                <version>1.4.5</version>
+            </dependency>
+            <dependency>
+                <!-- forceer groovy versie aangezien restassured 1.7.11-SNAPSHOT wil gebruiken -->
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy</artifactId>
+                <version>1.7.10</version>
+            </dependency>
+
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.10</version>
@@ -298,7 +322,103 @@
                     </execution>
                 </executions>
             </plugin>
-        </plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                <!--
+                <configuration>
+                    <argLine>-Xmx1024m -Xms256m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+                -->
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.16</version>
+                <configuration>
+                    <!--
+                    <argLine>-Xmx1024m -Xms256m -XX:MaxPermSize=256m</argLine>
+                    -->
+                    <includes>
+                        <include>**/*IT.java</include>
+                        <include>**/IT*.java</include>
+                    </includes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>        </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.cargo</groupId>
+                    <artifactId>cargo-maven2-plugin</artifactId>
+                    <version>1.4.5</version>
+                    <executions>
+                        <execution>
+                            <id>start-jetty</id>
+                            <phase>pre-integration-test</phase>
+                            <goals><goal>start</goal></goals>
+                            <!--
+                            <configuration>
+                                <configuration>
+                                    <properties>
+                                        <cargo.jvmargs>-Xmx1024m -Xms256m -XX:MaxPermSize=256m</cargo.jvmargs>
+                                    </properties>
+                                </configuration>
+                            </configuration>
+                            -->
+                        </execution>
+                        <execution>
+                            <id>stop-jetty</id>
+                            <phase>post-integration-test</phase>
+                            <goals><goal>stop</goal></goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <container>
+                            <containerId>jetty8x</containerId>
+                            <!--<type>embedded</type>-->
+                            <log>${basedir}/target/cargo.log</log>
+                            <output>${basedir}/target/jetty.log</output>
+                        </container>
+
+                        <configuration>
+                            <properties>
+                                <cargo.servlet.port>8123</cargo.servlet.port>
+                                <cargo.logging>high</cargo.logging>
+                                <cargo.jvmargs>-Dzzz</cargo.jvmargs>
+                            </properties>
+                        </configuration>
+
+                        <deployables>
+                            <deployable>
+                                <pingURL>http://localhost:8123/common-resteasy/rest/profile</pingURL>
+                                <pingTimeout>600000</pingTimeout> <!-- 5 min, allow for slow Jenkins -->
+                                <properties>
+                                    <context>common-resteasy</context>
+                                </properties>
+                            </deployable>
+                        </deployables>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
+
 
 </project>
